# unify-matter-pc

./: .gitignore  .gitmodules
docs/: conf.py  genindex.html  objects.inv  readme_overview.html  searchindex.js
docs/_build/doctrees/: environment.pickle  index.doctree  index_old.doctree  readme_building.doctree  readme_overview.doctree  readme_user.doctree
docs/_build/html/: .buildinfo  index.html  index_old.html  readme_building.html  readme_user.html  search.html
docs/_build/html/_sources/: index.rst.txt
docs/_sources/: readme_building.md.txt
linux/: BUILD.gn
linux/templates/: mpc-templates.json  mpc_support.js  run_zap.sh  run_zap_data_models.sh  run_zap_fixed_ep_config.sh
linux/templates/data_models/: matter_data_model.json  unify_data_model.json
linux/zap-generated/data-models/: matter_support_model.js  unify_support_model.js
scripts/: build_essentials.sh  build_prerequisites.py  build_prerequisites.sh
unify-matter-pc-common/: unify-matter-pc.matter  unify-matter-pc.zap
